@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-02-07 17:02:21 johna Exp $
+$Id: History,v 1.4 1999-04-28 14:13:44 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+greps-01-00-04  28th April 1999  John Allison
+- Moved G4VVisManager and G4VGraphicsScene to intercoms.
 
 greps-01-00-03  7th February 1999  John Allison
 - Removed GNU_GCC from G4Polymarker.cc.
